--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,10 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <!--Our CSS -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">   
     <!-- Sticky Footer -->
-    {{!-- <link rel="stylesheet" type="text/css" href="css/sticky_footer_style.css"> --}}
+    <link rel="stylesheet" type="text/css" href="/assets/css/sticky_footer_style.css">
     <title>Chat Room App</title>
 </head>
 <body>{{{body}}}
