--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,47 +1,50 @@
 <!-- 1. Header -->
-    <div class="container p-1">
-        <div class="p-0 mb-4">
-            <h1 class="display-4 mx-auto">Welcome to Chat App</h1>
-        </div>
+<div class="container p-1">
+    <div class="p-0 mb-4">
+        <h1 class="display-4 mx-auto">Welcome to Chat App</h1>
+    </div>
     <!-- 2.Chat Room buttoms -->
-        <div id="chat-rooms" class="row p-0 mb-4">
-            <!--Chat 1 is 'active'-->
-            <button type="button" class="col btn btn-outline-primary btn-lg">Chat 1</button>
-            <button type="button" class="col btn btn-outline-primary btn-lg">Chat 2</button>
-            <button type="button" class="col btn btn-outline-primary btn-lg">Chat 3</button>
-            <button type="button" class="col btn btn-outline-primary btn-lg">Chat 4</button>
-        </div>
+    <div id="chat-rooms" class="row p-0 mb-4">
+        <!--Chat 1 is 'active'-->
+        <button type="button" class="col btn btn-outline-primary btn-lg">Chat 1</button>
+        <button type="button" class="col btn btn-outline-primary btn-lg">Chat 2</button>
+        <button type="button" class="col btn btn-outline-primary btn-lg">Chat 3</button>
+        <button type="button" class="col btn btn-outline-primary btn-lg">Chat 4</button>
+    </div>
     <!-- 3. "Row with Login Info + Messages on the right" -->
-        <div class="row">
-            <!-- Login Info (left)-->
-            <div class="col-sm-4 card mb-2 p-2">
-                <img class="card-img-top" src="./background.jpeg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Info for <span class="font-weight-bold">Person Senior</span></h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <!-- Messages (right) -->
-            <div id="messages" class="col-sm-8 p-4 border mb-2">
-                <!-- new messages created will have class name 'messages' -->
-                <div class="messages alert alert-primary">1111</div>
-                <div class="messages alert alert-secondary">2222</div>
-                <div class="messages alert alert-primary">3333</div>
+    <div class="row">
+        <!-- Login Info (left)-->
+        <div class="col-sm-4 card mb-2 p-2">
+            <img class="card-img-top" src="./background.jpeg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Info for <span class="font-weight-bold">Person Senior</span></h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
+        <!-- Messages (right) -->
+        <div id="messages" class="col-sm-8 p-4 border mb-2">
+            <!-- new messages created will have class name 'messages' -->
+            {{#each messages }}
+            <div class="messages alert alert-primary" data-user={{user}} data-id="{{id}}">{{user}}: {{message}}</div>
+            {{/each}}
+            <div class="messages alert alert-secondary">2222</div>
+            <div class="messages alert alert-primary">3333</div>
+            <div class="messages alert alert-secondary">2222</div>
+            <div class="messages alert alert-primary">3333</div>
+
+        </div>
     </div>
-    <!-- Sticky Footer - Send Message -->
-    <div>
-        <form action="" class="footer p-2">
-            <div class="">
-                <input id="m" autocomplete="off" class="col-sm-10 form-control" type="text" placeholder="Chat Here">
-                <div class="col-sm-2">
-                    <button type="button" id="submit" class="btn btn-primary">Send</button>
-                </div>
+</div>
+<!-- Sticky Footer - Send Message -->
+<div>
+    <form action="" class="footer p-2">
+        <div class="">
+            <input id="m" autocomplete="off" class="col-sm-10 form-control" type="text" placeholder="Chat Here">
+            <div class="col-sm-2">
+                <button type="button" id="submit" class="btn btn-primary">Send</button>
             </div>
-        </form>
-    </div>
-
-
+        </div>
+    </form>
+</div>
