login button w/ query

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,10 +25,10 @@
     </div>
     <!-- Logins -->
     <div id="all-users">
-        <button type="button" data-id="Rafael" class="col btn btn-primary user">Rafael</button>
+        {{!-- <button type="button" data-id="Rafael" class="col btn btn-primary user">Rafael</button>
         <button type="button" class="col btn btn-primary">Meili</button>
         <button type="button" class="col btn btn-primary">Jake</button>
-        <button type="button" class="col btn btn-primary">Alejandro</button>
+        <button type="button" class="col btn btn-primary">Alejandro</button> --}}
     </div>
     <!-- 2.Chat Room buttoms -->
     <div id="chat-rooms" class="row p-0 mb-4">
