--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,12 +42,12 @@
     <div class="row">
         <!-- Login Info (left)-->
         <div class="col-sm-4 card mb-2 p-2">
-            <img class="card-img-top" src="./background.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Info for <span id="logged-in" class="font-weight-bold">Person Senior</span></h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
-                <a href="#" id="log-out" data-user="" class="btn btn-primary">Logout</a>
+                <a href="/logout" id="log-out" data-user="" class="btn btn-primary">Logout</a>
             </div>
         </div>
         <!-- Messages (right) -->
