get user from passport app

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,7 +44,7 @@
         <div class="col-sm-4 card mb-2 p-2">
             <img class="card-img-top" src="" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Info for <span id="logged-in" class="font-weight-bold">Person Senior</span></h5>
+                <h5 class="card-title">Info for <span id="logged-in" class="user-name font-weight-bold">Person Senior</span></h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
                 <a href="/logout" id="log-out" data-user="" class="btn btn-primary">Logout</a>
