getting rid fo that stupid broken image tag

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,11 +42,9 @@
     <div class="row">
         <!-- Login Info (left)-->
         <div class="col-sm-4 card mb-2 p-2">
-            <img class="card-img-top" src="" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Info for <span id="logged-in" class="user-name font-weight-bold">Person Senior</span></h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                <h5 class="card-title">Welcome to our chatroom, <span id="logged-in" class="user-name font-weight-bold"></span></h5>
+                <p class="card-text">This is a old school aim style chatroom.</p>
                 <a href="/logout" id="log-out" data-user="" class="btn btn-primary">Logout</a>
             </div>
         </div>
