Removes edit, save and delete functions from messages of users not logged in

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -55,10 +55,10 @@
             <div class="messages alert alert-primary" data-user={{user}} data-id="{{id}}">
                 <div class="namebolder">{{user}}:</div>
                 <div class="text" data-id="{{id}}">{{message}}</div>
-                <div class="delete-edit-save">
-                <button data-id="{{id}}" type="button" class="delete close">&times;</button>
-                <span data-id="{{id}}" type="button" class="edit border"></span>
-                <span data-id="{{id}}" type="button" class="save border">save</span>
+                <div data-loggedin={{user}} class="delete-edit-save">
+                    <button data-id="{{id}}" type="button" class="delete close">&times;</button>
+                    <span data-id="{{id}}" type="button" class="edit border"></span>
+                    <span data-id="{{id}}" type="button" class="save border">save</span>
                 </div>
 
             </div>
