Button and style changes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,11 +30,10 @@
 </div>
 <!-- Sticky Footer - Send Message -->
 <div>
-    <form action="" class="footer p-2">
+    <form action="" class="input-group footer p-2">
             <input id="m" autocomplete="off" class="col-sm-10 form-control" type="text" placeholder="Chat Here">
-            <div class="col-sm-2">
+            <div class="input-group-btn col-sm-2">
                 <button type="button" id="submit" class="btn btn-primary">Send</button>
-
         </div>
     </form>
 </div>
