--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,7 +14,8 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+  /* line-height: 60px; */
+   /* Vertically center the text there */
   background-color: #f5f5f5;
 }
 
