took out chatrooms, scroll fix

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,11 +4,11 @@
         <h1 class="display-4 mx-auto">Welcome to Chat App</h1>
     </div>
     <!-- 2.Chat Room buttoms -->
-    <div id="chat-rooms" class="row p-0 mb-4">
+    {{!-- <div id="chat-rooms" class="row p-0 mb-4">
         <!--Chat 1 is 'active'-->
         <button type="button" class="col btn btn-outline-primary btn-lg">Chat 1</button>
         <button type="button" class="col btn btn-outline-primary btn-lg">Chat 2</button>
-    </div>
+    </div> --}}
     <!-- 3. "Row with Login Info + Messages on the right" -->
     <div class="row">
         <!-- Login Info (left)-->
